ipc/ipdl/test/ipdl/ok/maybe_OfActors.ipdl
include protocol maybe_OfActorsSub;

protocol maybe_OfActors {
    manages maybe_OfActorsSub;

child:
    async Msg(maybe_OfActorsSub? p);

    async maybe_OfActorsSub();
};
